fixed overflow for review page

--- a/client/src/styles/components/_review.scss
+++ b/client/src/styles/components/_review.scss
@@ -21,6 +21,8 @@
 
 		padding: 0px;
 		font-size: 1em;
+
+		overflow-y: auto;
 	}
 
 	.lineNumber {
